--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "debug": "^2.2.0",
     "eslint-plugin-react": "^3.1.0",
     "express": "^4.13.1",
-    "jquery": "^2.1.4",
     "lodash": "^3.10.0",
     "q": "^1.4.1",
     "react": "^0.13.3",
+    "react-async": "^2.1.0",
+    "react-router": "^0.13.3",
     "serve-static": "^1.10.0"
   },
   "devDependencies": {
