--- a/package.json
+++ b/package.json
@@ -4,41 +4,87 @@
   "description": "A shell script snippets repository website",
   "main": "index.js",
   "dependencies": {
-    "babel": "^5.8.3",
-    "classnames": "^2.1.3",
-    "debug": "^2.2.0",
-    "eslint-plugin-react": "^3.1.0",
-    "express": "^4.13.1",
-    "lodash": "^3.10.0",
-    "q": "^1.4.1",
+    "babel": "^5.8.21",
+    "babel-plugin-typecheck": "^1.2.0",
+    "body-parser": "^1.13.3",
+    "compression": "^1.5.2",
+    "express": "^4.13.3",
+    "express-session": "^1.11.3",
+    "file-loader": "^0.8.4",
+    "http-proxy": "^1.11.1",
+    "map-props": "^0.1.1",
+    "piping": "^0.2.0",
+    "pretty-error": "^1.2.0",
+    "query-string": "^2.4.0",
     "react": "^0.13.3",
-    "react-async": "^2.1.0",
+    "react-document-meta": "^0.1.4",
+    "react-redux": "^1.0.1",
     "react-router": "^0.13.3",
-    "serve-static": "^1.10.0"
+    "redux": "^1.0.1",
+    "serialize-javascript": "^1.0.0",
+    "serve-favicon": "^2.3.0",
+    "serve-static": "^1.10.0",
+    "superagent": "^1.3.0",
+    "url-loader": "^0.5.6",
+    "webpack-isomorphic-tools": "^0.8.4"
   },
   "devDependencies": {
-    "babel-core": "^5.8.3",
+    "autoprefixer-loader": "^2.0.0",
+    "babel-core": "^5.8.22",
+    "babel-eslint": "^4.1.0",
     "babel-loader": "^5.3.2",
-    "css-loader": "^0.15.5",
-    "del": "^1.2.0",
-    "eslint": "^0.24.1",
-    "file-loader": "^0.8.4",
-    "gulp": "^3.9.0",
-    "gulp-eslint": "^0.15.0",
-    "gulp-mocha": "^2.1.3",
-    "gulp-util": "^3.0.6",
-    "html-loader": "^0.3.0",
-    "html-webpack-plugin": "^1.6.0",
-    "image-webpack-loader": "^1.6.1",
-    "imagemin": "^3.2.0",
+    "babel-runtime": "^5.8.20",
+    "better-npm-run": "0.0.2",
+    "chai": "^3.2.0",
+    "clean-webpack-plugin": "^0.1.3",
+    "concurrently": "^0.1.1",
+    "css-loader": "^0.16.0",
+    "eslint": "^1.2.1",
+    "eslint-plugin-react": "^3.2.3",
+    "extract-text-webpack-plugin": "^0.8.2",
     "json-loader": "^0.5.2",
+    "mocha": "^2.2.5",
+    "node-sass": "^3.3.1",
+    "react-a11y": "^0.2.6",
+    "react-hot-loader": "^1.2.9",
+    "redux-devtools": "^1.1.1",
+    "sass-loader": "^2.0.1",
     "style-loader": "^0.12.3",
-    "uglify-loader": "^1.2.0",
-    "webpack": "^1.10.3",
+    "webpack": "^1.12.0",
     "webpack-dev-server": "^1.10.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./node_modules/better-npm-run start",
+    "build": "webpack --verbose --colors --display-error-details --config webpack/prod.config.js",
+    "lint": "eslint -c .eslintrc src",
+    "start-dev": "node ./node_modules/better-npm-run start-dev",
+    "watch-client": "node ./node_modules/better-npm-run watch-client",
+    "dev": "concurrent --kill-others \"npm run watch-client\" \"npm run start-dev\"",
+    "test": "mocha --compilers js:babel/register"
+  },
+  "betterScripts": {
+    "start": {
+      "command": "node ./bin/server.js",
+      "env": {
+        "NODE_PATH": "./src",
+        "NODE_ENV": "production",
+        "PORT": 8080
+      }
+    },
+    "start-dev": {
+      "command": "node ./bin/server.js",
+      "env": {
+        "NODE_PATH": "./src",
+        "NODE_ENV": "development"
+      }
+    },
+    "watch-client": {
+      "command": "node webpack/webpack-dev-server.js",
+      "env": {
+        "UV_THREADPOOL_SIZE": 100,
+        "NODE_PATH": "./src"
+      }
+    }
   },
   "repository": {
     "type": "git",
