--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,10 @@
     "jsx": true
   },
   "rules": {
+    "react/prop-types": 1,
+    "react/jsx-uses-react": 2,
+    "react/jsx-uses-vars": 2,
+    "react/react-in-jsx-scope": 2,
     "quotes": [2, "single"],
     "camelcase": [2,
       {
