--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
     "q": "^1.4.1",
     "react": "^0.13.3",
     "react-async": "^2.1.0",
-    "react-router": "^0.13.3",
+    "react-redux": "^1.0.1",
+    "react-router": "1.0.0-beta3",
+    "redux": "^1.0.1",
+    "redux-actions": "^0.8.0",
+    "redux-logger": "^1.0.6",
+    "redux-promise": "^0.5.0",
+    "redux-thunk": "^0.1.0",
     "serve-static": "^1.10.0"
   },
   "devDependencies": {
