--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "image-webpack-loader": "^1.6.1",
     "imagemin": "^3.2.0",
     "json-loader": "^0.5.2",
+    "node-sass": "^3.2.0",
+    "react-hot-loader": "^1.3.0",
+    "sass-loader": "^2.0.1",
     "style-loader": "^0.12.3",
     "uglify-loader": "^1.2.0",
     "webpack": "^1.10.3",
