--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "debug": "^2.2.0",
     "eslint-plugin-react": "^3.1.0",
     "express": "^4.13.1",
+    "font-awesome": "^4.4.0",
     "lodash": "^3.10.0",
     "q": "^1.4.1",
     "react": "^0.13.3",
