--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react": "^0.13.3",
     "react-async": "^2.1.0",
     "react-redux": "^1.0.1",
-    "react-router": "1.0.0-beta3",
+    "react-router": "^0.13.3",
     "redux": "^1.0.1",
     "redux-actions": "^0.8.0",
     "redux-logger": "^1.0.6",
