--- a/.eslintrc
+++ b/.eslintrc
@@ -34,12 +34,18 @@
     ],
     "max-len": [1, 80, 2],
     "space-after-keywords": [2, "always"],
-    "space-before-blocks": [2, "always"]
+    "space-before-blocks": [2, "always"],
+    "no-underscore-dangle": 0
   },
   "env": {
     "es6": true,
     "node": true,
     "mocha": true,
     "browser": true
+  },
+  "globals": {
+    "_SERVER_": true,
+    "_CLIENT_": true,
+    "_DEVELOPMENT_": true
   }
 }
