--- a/package.json
+++ b/package.json
@@ -41,11 +41,14 @@
     "json-loader": "^0.5.2",
     "node-sass": "^3.2.0",
     "react-hot-loader": "^1.3.0",
+    "redux-devtools": "^1.1.2",
     "sass-loader": "^2.0.1",
     "style-loader": "^0.12.3",
     "uglify-loader": "^1.2.0",
     "webpack": "^1.10.3",
-    "webpack-dev-server": "^1.10.1"
+    "webpack-dev-middleware": "^1.2.0",
+    "webpack-dev-server": "^1.10.1",
+    "webpack-hot-middleware": "^2.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
