--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "babel": "^5.8.3",
     "classnames": "^2.1.3",
+    "compression": "^1.5.2",
     "debug": "^2.2.0",
     "eslint-plugin-react": "^3.1.0",
     "express": "^4.13.1",
