--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "main": "index.js",
   "dependencies": {
     "babel": "^5.8.3",
+    "body-parser": "^1.13.3",
     "classnames": "^2.1.3",
     "compression": "^1.5.2",
     "debug": "^2.2.0",
     "eslint-plugin-react": "^3.1.0",
     "express": "^4.13.1",
+    "express-session": "^1.11.3",
     "flux-standard-action": "^0.6.0",
     "font-awesome": "^4.4.0",
     "lodash": "^3.10.0",
+    "morgan": "^1.6.1",
     "q": "^1.4.1",
     "react": "^0.13.3",
     "react-async": "^2.1.0",
@@ -23,7 +26,8 @@
     "redux-logger": "^1.0.6",
     "redux-promise": "^0.5.0",
     "redux-thunk": "^0.1.0",
-    "serve-static": "^1.10.0"
+    "serve-static": "^1.10.0",
+    "xhr": "^2.0.4"
   },
   "devDependencies": {
     "babel-core": "^5.8.3",
