--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "redux-promise": "^0.5.0",
     "redux-thunk": "^0.1.0",
     "serve-static": "^1.10.0",
-    "xhr": "^2.0.4"
+    "superagent": "^1.3.0"
   },
   "devDependencies": {
     "babel-core": "^5.8.3",
