--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint-plugin-react": "^3.1.0",
     "express": "^4.13.1",
     "express-session": "^1.11.3",
+    "extract-text-webpack-plugin": "^0.8.2",
     "flux-standard-action": "^0.6.0",
     "font-awesome": "^4.4.0",
     "lodash": "^3.10.0",
