--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "redux-logger": "^1.0.6",
     "redux-promise": "^0.5.0",
     "redux-thunk": "^0.1.0",
+    "sails-memory": "^0.10.5",
     "serve-static": "^1.10.0",
-    "superagent": "^1.3.0"
+    "superagent": "^1.3.0",
+    "waterline": "^0.10.26"
   },
   "devDependencies": {
     "babel-core": "^5.8.3",
