--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash": "^3.10.0",
     "morgan": "^1.6.1",
     "passport": "^0.3.0",
+    "passport-github": "^1.0.0",
     "passport-github2": "^0.1.9",
     "passport-local": "^1.0.0",
     "q": "^1.4.1",
