--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "redux-logger": "^1.0.6",
     "redux-promise": "^0.5.0",
     "redux-thunk": "^0.1.0",
-    "sails-memory": "^0.10.5",
+    "sequelize": "^3.8.0",
     "serve-static": "^1.10.0",
-    "superagent": "^1.3.0",
-    "waterline": "^0.10.26"
+    "sqlite3": "^3.1.0",
+    "superagent": "^1.3.0"
   },
   "devDependencies": {
     "babel-core": "^5.8.3",
