--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "babel": "^5.8.3",
-    "bcrypt": "^0.8.5",
+    "bcryptjs": "^2.2.1",
     "body-parser": "^1.13.3",
     "classnames": "^2.1.3",
     "compression": "^1.5.2",
