--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "extract-text-webpack-plugin": "^0.8.2",
     "flux-standard-action": "^0.6.0",
     "font-awesome": "^4.4.0",
+    "history": "^1.9.1",
     "lodash": "^3.10.0",
     "morgan": "^1.6.1",
     "passport": "^0.3.0",
@@ -24,10 +25,11 @@
     "passport-github2": "^0.1.9",
     "passport-local": "^1.0.0",
     "q": "^1.4.1",
+    "qs": "^5.1.0",
     "react": "^0.13.3",
     "react-async": "^2.1.0",
     "react-redux": "^1.0.1",
-    "react-router": "^0.13.3",
+    "react-router": "1.0.0-rc1",
     "redux": "^1.0.1",
     "redux-actions": "^0.8.0",
     "redux-logger": "^1.0.6",
