--- a/package.json
+++ b/package.json
@@ -32,14 +32,15 @@
     "react-router": "1.0.0-rc1",
     "redux": "^1.0.1",
     "redux-actions": "^0.8.0",
-    "redux-form": "^1.6.0",
+    "redux-form": "^1.6.5",
     "redux-logger": "^1.0.6",
     "redux-promise": "^0.5.0",
     "redux-thunk": "^0.1.0",
     "sequelize": "^3.8.0",
     "serve-static": "^1.10.0",
     "sqlite3": "^3.1.0",
-    "superagent": "^1.3.0"
+    "superagent": "^1.3.0",
+    "validator": "^4.0.6"
   },
   "devDependencies": {
     "babel-core": "^5.8.3",
