--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "passport-local": "^1.0.0",
     "qs": "^5.1.0",
     "react": "^0.13.3",
-    "react-redux": "^1.0.1",
+    "react-redux": "^2.1.2",
     "react-router": "1.0.0-rc1",
-    "redux": "^1.0.1",
+    "redux": "^3.0.0",
     "redux-actions": "^0.8.0",
     "redux-form": "^1.6.5",
     "redux-logger": "^1.0.6",
@@ -41,6 +41,7 @@
     "validator": "^4.0.6"
   },
   "devDependencies": {
+    "apidoc": "^0.13.1",
     "babel-core": "^5.8.3",
     "babel-loader": "^5.3.2",
     "css-loader": "^0.15.5",
@@ -48,6 +49,7 @@
     "eslint": "^0.24.1",
     "file-loader": "^0.8.4",
     "gulp": "^3.9.0",
+    "gulp-apidoc": "^0.1.5",
     "gulp-eslint": "^0.15.0",
     "gulp-mocha": "^2.1.3",
     "gulp-util": "^3.0.6",
@@ -58,7 +60,7 @@
     "json-loader": "^0.5.2",
     "node-sass": "^3.2.0",
     "react-hot-loader": "^1.3.0",
-    "redux-devtools": "^1.1.2",
+    "redux-devtools": "^2.1.2",
     "sass-loader": "^2.0.1",
     "style-loader": "^0.12.3",
     "uglify-loader": "^1.2.0",
