--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "extract-text-webpack-plugin": "^0.8.2",
     "flux-standard-action": "^0.6.0",
     "font-awesome": "^4.4.0",
+    "gm": "^1.20.0",
     "history": "^1.9.1",
     "lodash": "^3.10.0",
     "morgan": "^1.6.1",
+    "multer": "^1.0.5",
     "passport": "^0.3.0",
     "passport-facebook": "^2.0.0",
     "passport-github": "^1.0.0",
