--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "^1.13.3",
     "classnames": "^2.1.3",
     "compression": "^1.5.2",
+    "connect-session-sequelize": "^2.3.1",
     "debug": "^2.2.0",
     "eslint-plugin-react": "^3.1.0",
     "express": "^4.13.1",
