--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "serve-static": "^1.10.0",
     "sqlite3": "^3.1.0",
     "superagent": "^1.3.0",
-    "validator": "^4.0.6"
+    "url-loader": "^0.5.6",
+    "validator": "^4.0.6",
+    "webpack-isomorphic-tools": "^0.9.0"
   },
   "devDependencies": {
     "apidoc": "^0.13.1",
