--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "passport-local": "^1.0.0",
     "qs": "^5.1.0",
     "react": "^0.13.3",
+    "react-dropzone": "^2.1.0",
     "react-redux": "^2.1.2",
     "react-router": "1.0.0-rc1",
     "redux": "^3.0.0",
