--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "passport-local": "^1.0.0",
     "qs": "^5.1.0",
     "react": "^0.13.3",
+    "react-avatar-editor": "^2.0.0",
     "react-dropzone": "^2.1.0",
     "react-helmet": "^1.1.5",
     "react-redux": "^2.1.2",
