Update DB to use Entry instead of Script

--- a/.eslintrc
+++ b/.eslintrc
@@ -22,7 +22,8 @@
     "new-cap": [2,
       {
         "capIsNewExceptions": [
-          "Server"
+          "Server",
+          "ENUM"
         ]
       }
     ],
