--- a/package.json
+++ b/package.json
@@ -5,59 +5,63 @@
   "main": "index.js",
   "dependencies": {
     "babel": "^5.8.3",
-    "bcryptjs": "^2.2.1",
-    "body-parser": "^1.13.3",
-    "classnames": "^2.1.3",
-    "compression": "^1.5.2",
+    "bcryptjs": "^2.3.0",
+    "body-parser": "^1.14.1",
+    "classnames": "^2.1.5",
+    "compression": "^1.6.0",
     "connect-session-sequelize": "^2.3.1",
     "debug": "^2.2.0",
-    "eslint-plugin-react": "^3.1.0",
+    "eslint-plugin-react": "^3.5.1",
     "express": "^4.13.1",
     "express-session": "^1.11.3",
     "extract-text-webpack-plugin": "^0.8.2",
     "flux-standard-action": "^0.6.0",
     "font-awesome": "^4.4.0",
     "gm": "^1.20.0",
-    "history": "^1.11.1",
+    "history": "^1.12.4",
+    "html-webpack-plugin": "^1.6.2",
     "lodash": "^3.10.0",
     "morgan": "^1.6.1",
-    "multer": "^1.0.5",
+    "multer": "^1.0.6",
     "passport": "^0.3.0",
     "passport-facebook": "^2.0.0",
     "passport-github": "^1.0.0",
     "passport-local": "^1.0.0",
-    "qs": "^5.1.0",
-    "react": "^0.13.3",
+    "qs": "^5.2.0",
+    "react": "^0.14.0",
     "react-avatar-editor": "^2.0.0",
+    "react-dom": "^0.14.0",
     "react-dropzone": "^2.1.0",
     "react-helmet": "^1.1.5",
-    "react-redux": "^2.1.2",
-    "react-router": "1.0.0-rc1",
-    "redux": "^3.0.0",
+    "react-redux": "^3.1.0",
+    "react-router": "^1.0.0-rc3",
+    "redux": "^3.0.2",
     "redux-actions": "^0.8.0",
-    "redux-form": "^1.7.0",
-    "redux-logger": "^1.0.6",
+    "redux-devtools": "^2.1.5",
+    "redux-form": "^2.1.0",
+    "redux-logger": "^2.0.3",
     "redux-promise": "^0.5.0",
-    "redux-thunk": "^0.1.0",
-    "sequelize": "^3.8.0",
+    "redux-thunk": "^1.0.0",
+    "sequelize": "^3.11.0",
     "serve-static": "^1.10.0",
     "sqlite3": "^3.1.0",
     "superagent": "^1.3.0",
     "url-loader": "^0.5.6",
-    "validator": "^4.0.6",
-    "webpack-isomorphic-tools": "^0.9.0"
+    "validator": "^4.1.0",
+    "webpack-hot-middleware": "^2.4.1",
+    "webpack-isomorphic-tools": "^0.9.1"
   },
   "devDependencies": {
     "apidoc": "^0.13.1",
     "babel-core": "^5.8.3",
     "babel-loader": "^5.3.2",
-    "css-loader": "^0.15.5",
-    "del": "^1.2.0",
-    "eslint": "^0.24.1",
+    "css-loader": "^0.19.0",
+    "del": "^2.0.2",
+    "eslint": "^1.6.0",
     "file-loader": "^0.8.4",
     "gulp": "^3.9.0",
-    "gulp-apidoc": "^0.1.5",
-    "gulp-eslint": "^0.15.0",
+    "gulp-apidoc": "^0.2.0",
+    "gulp-eslint": "^1.0.0",
     "gulp-mocha": "^2.1.3",
     "gulp-util": "^3.0.6",
     "html-loader": "^0.3.0",
@@ -66,7 +70,7 @@
     "node-sass": "^3.2.0",
     "react-hot-loader": "^1.3.0",
     "redux-devtools": "^2.1.2",
-    "sass-loader": "^2.0.1",
+    "sass-loader": "^3.0.0",
     "style-loader": "^0.12.3",
     "uglify-loader": "^1.2.0",
     "webpack": "^1.10.3",
