Refactor code to use normalizr. Resolves #44

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lodash": "^3.10.0",
     "morgan": "^1.6.1",
     "multer": "^1.0.6",
+    "normalizr": "^1.1.0",
     "passport": "^0.3.0",
     "passport-facebook": "^2.0.0",
     "passport-github": "^1.0.0",
