--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
     "react/jsx-uses-react": 2,
     "react/jsx-uses-vars": 2,
     "react/react-in-jsx-scope": 2,
+    "no-console": 0,
     "quotes": [2, "single"],
     "camelcase": [2,
       {
