--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-helmet": "^1.1.5",
     "react-redux": "^3.1.0",
     "react-router": "^1.0.0-rc3",
+    "react-textarea-autosize": "^3.0.0",
     "redux": "^3.0.2",
     "redux-actions": "^0.8.0",
     "redux-devtools": "^2.1.5",
