--- a/.eslintrc
+++ b/.eslintrc
@@ -38,7 +38,8 @@
     "max-len": [1, 80, 2],
     "space-after-keywords": [2, "always"],
     "space-before-blocks": [2, "always"],
-    "no-underscore-dangle": 0
+    "no-underscore-dangle": 0,
+    "semi": 2
   },
   "env": {
     "es6": true,
