--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "flux-standard-action": "^0.6.0",
     "font-awesome": "^4.4.0",
     "gm": "^1.20.0",
+    "highlight.js": "^8.9.1",
     "history": "^1.12.4",
     "html-webpack-plugin": "^1.6.2",
     "lodash": "^3.10.0",
@@ -37,6 +38,8 @@
     "react-dom": "^0.14.0",
     "react-dropzone": "^2.1.0",
     "react-helmet": "^1.1.5",
+    "react-highlight": "^0.5.1",
+    "react-pure-render": "^1.0.2",
     "react-redux": "^3.1.0",
     "react-router": "^1.0.0-rc3",
     "react-textarea-autosize": "^3.0.0",
