--- a/package.json
+++ b/package.json
@@ -7,24 +7,27 @@
     "babel": "^5.8.3",
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.14.1",
-    "classnames": "^2.1.5",
+    "classnames": "^2.2.0",
     "compression": "^1.6.0",
     "connect-session-sequelize": "^2.3.1",
+    "css-loader": "^0.21.0",
     "debug": "^2.2.0",
-    "eslint-plugin-react": "^3.5.1",
+    "eslint": "^1.7.3",
+    "eslint-plugin-react": "^3.6.3",
     "express": "^4.13.1",
     "express-session": "^1.11.3",
     "extract-text-webpack-plugin": "^0.8.2",
     "flux-standard-action": "^0.6.0",
     "font-awesome": "^4.4.0",
     "gm": "^1.20.0",
+    "gulp-util": "^3.0.7",
     "highlight.js": "^8.9.1",
-    "history": "^1.12.4",
+    "history": "^1.12.5",
     "html-webpack-plugin": "^1.6.2",
     "lodash": "^3.10.0",
     "marked": "^0.3.5",
     "morgan": "^1.6.1",
-    "multer": "^1.0.6",
+    "multer": "^1.1.0",
     "normalizr": "^1.3.1",
     "passport": "^0.3.0",
     "passport-facebook": "^2.0.0",
@@ -33,37 +36,38 @@
     "qs": "^5.2.0",
     "raw-loader": "^0.5.1",
     "react": "^0.14.0",
-    "react-ace": "^2.5.0",
+    "react-ace": "^2.6.0",
     "react-avatar-editor": "^2.0.0",
     "react-dom": "^0.14.0",
-    "react-dropzone": "^2.1.0",
-    "react-helmet": "^1.1.5",
+    "react-dropzone": "^2.2.3",
+    "react-helmet": "^2.1.1",
     "react-highlight": "^0.5.1",
     "react-pure-render": "^1.0.2",
-    "react-redux": "^3.1.0",
+    "react-redux": "^4.0.0",
     "react-router": "^1.0.0-rc3",
-    "react-textarea-autosize": "^3.0.0",
-    "redux": "^3.0.2",
+    "react-textarea-autosize": "^3.1.0",
+    "redux": "^3.0.4",
     "redux-actions": "^0.8.0",
     "redux-devtools": "^2.1.5",
-    "redux-form": "^2.1.0",
-    "redux-logger": "^2.0.3",
+    "redux-form": "^2.4.5",
+    "redux-logger": "^2.0.4",
     "redux-promise": "^0.5.0",
     "redux-thunk": "^1.0.0",
-    "sequelize": "^3.11.0",
+    "sequelize": "^3.12.2",
     "serve-static": "^1.10.0",
     "sqlite3": "^3.1.0",
+    "style-loader": "^0.13.0",
     "superagent": "^1.3.0",
     "url-loader": "^0.5.6",
-    "validator": "^4.1.0",
+    "validator": "^4.2.0",
     "webpack-hot-middleware": "^2.4.1",
-    "webpack-isomorphic-tools": "^0.9.1"
+    "webpack-isomorphic-tools": "^1.0.2"
   },
   "devDependencies": {
     "apidoc": "^0.13.1",
     "babel-core": "^5.8.3",
     "babel-loader": "^5.3.2",
-    "css-loader": "^0.19.0",
+    "css-loader": "^0.21.0",
     "del": "^2.0.2",
     "eslint": "^1.6.0",
     "file-loader": "^0.8.4",
@@ -79,7 +83,7 @@
     "react-hot-loader": "^1.3.0",
     "redux-devtools": "^2.1.2",
     "sass-loader": "^3.0.0",
-    "style-loader": "^0.12.3",
+    "style-loader": "^0.13.0",
     "uglify-loader": "^1.2.0",
     "webpack": "^1.10.3",
     "webpack-dev-middleware": "^1.2.0",
