--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "html-webpack-plugin": "^1.6.2",
     "lodash": "^3.10.0",
     "marked": "^0.3.5",
+    "moment": "^2.10.6",
     "morgan": "^1.6.1",
     "multer": "^1.1.0",
     "normalizr": "^1.3.1",
