--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dropzone": "^2.2.3",
     "react-helmet": "^2.1.1",
     "react-highlight": "^0.5.1",
+    "react-input-autosize": "^0.6.2",
     "react-pure-render": "^1.0.2",
     "react-redux": "^4.0.0",
     "react-router": "^1.0.0-rc3",
