--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "file-loader": "^0.8.4",
     "gulp": "^3.9.0",
     "gulp-apidoc": "^0.2.0",
+    "gulp-babel": "^5.3.0",
     "gulp-eslint": "^1.0.0",
     "gulp-mocha": "^2.1.3",
     "gulp-util": "^3.0.6",
