--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "highlight.js": "^8.9.1",
     "history": "^1.12.5",
     "html-webpack-plugin": "^1.6.2",
+    "http-proxy": "^1.12.0",
     "lodash": "^3.10.0",
     "marked": "^0.3.5",
     "moment": "^2.10.6",
