--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "react": "^0.14.0",
     "react-ace": "^2.6.0",
     "react-avatar-editor": "^2.0.0",
+    "react-dnd": "^2.0.2",
+    "react-dnd-html5-backend": "^2.0.0",
     "react-dom": "^0.14.0",
     "react-dropzone": "^2.2.3",
     "react-helmet": "^2.1.1",
