--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shellscripts",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "A shell script snippets repository website",
   "main": "index.js",
   "dependencies": {
@@ -10,20 +10,14 @@
     "classnames": "^2.2.0",
     "compression": "^1.6.0",
     "connect-session-sequelize": "^2.3.1",
-    "css-loader": "^0.21.0",
     "debug": "^2.2.0",
-    "eslint": "^1.7.3",
-    "eslint-plugin-react": "^3.6.3",
     "express": "^4.13.1",
     "express-session": "^1.11.3",
-    "extract-text-webpack-plugin": "^0.8.2",
     "flux-standard-action": "^0.6.0",
     "font-awesome": "^4.4.0",
     "gm": "^1.20.0",
-    "gulp-util": "^3.0.7",
     "highlight.js": "^8.9.1",
     "history": "^1.12.5",
-    "html-webpack-plugin": "^1.6.2",
     "http-proxy": "^1.12.0",
     "lodash": "^3.10.0",
     "marked": "^0.3.5",
@@ -36,7 +30,6 @@
     "passport-github": "^1.0.0",
     "passport-local": "^1.0.0",
     "qs": "^5.2.0",
-    "raw-loader": "^0.5.1",
     "react": "^0.14.0",
     "react-ace": "^2.6.0",
     "react-avatar-editor": "^2.0.0",
@@ -47,25 +40,20 @@
     "react-helmet": "^2.1.1",
     "react-highlight": "^0.5.1",
     "react-input-autosize": "^0.6.2",
-    "react-pure-render": "^1.0.2",
     "react-redux": "^4.0.0",
     "react-router": "^1.0.0-rc3",
     "react-textarea-autosize": "^3.1.0",
     "redux": "^3.0.4",
     "redux-actions": "^0.8.0",
-    "redux-devtools": "^2.1.5",
-    "redux-form": "^2.4.5",
+    "redux-form": "~2.0.0",
     "redux-logger": "^2.0.4",
     "redux-promise": "^0.5.0",
     "redux-thunk": "^1.0.0",
     "sequelize": "^3.12.2",
     "serve-static": "^1.10.0",
     "sqlite3": "^3.1.0",
-    "style-loader": "^0.13.0",
     "superagent": "^1.3.0",
-    "url-loader": "^0.5.6",
     "validator": "^4.2.0",
-    "webpack-hot-middleware": "^2.4.1",
     "webpack-isomorphic-tools": "^1.0.2"
   },
   "devDependencies": {
@@ -74,23 +62,27 @@
     "babel-loader": "^5.3.2",
     "css-loader": "^0.21.0",
     "del": "^2.0.2",
-    "eslint": "^1.6.0",
+    "eslint": "^1.7.3",
+    "eslint-plugin-react": "^3.6.3",
+    "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
     "gulp": "^3.9.0",
     "gulp-apidoc": "^0.2.0",
     "gulp-babel": "^5.3.0",
     "gulp-eslint": "^1.0.0",
     "gulp-mocha": "^2.1.3",
-    "gulp-util": "^3.0.6",
+    "gulp-util": "^3.0.7",
     "html-loader": "^0.3.0",
-    "html-webpack-plugin": "^1.6.0",
+    "html-webpack-plugin": "^1.6.2",
     "json-loader": "^0.5.2",
     "node-sass": "^3.2.0",
+    "raw-loader": "^0.5.1",
     "react-hot-loader": "^1.3.0",
-    "redux-devtools": "^2.1.2",
+    "redux-devtools": "^2.1.5",
     "sass-loader": "^3.0.0",
     "style-loader": "^0.13.0",
     "uglify-loader": "^1.2.0",
+    "url-loader": "^0.5.6",
     "webpack": "^1.10.3",
     "webpack-dev-middleware": "^1.2.0",
     "webpack-hot-middleware": "^2.0.0"
