--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babel": "^5.8.3",
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.14.1",
+    "brace": "^0.5.1",
     "classnames": "^2.2.0",
     "compression": "^1.6.0",
     "connect-session-sequelize": "^2.3.1",
