--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "redux-promise": "^0.5.0",
     "redux-thunk": "^1.0.0",
     "sequelize": "^3.12.2",
+    "serve-favicon": "^2.3.0",
     "serve-static": "^1.10.0",
     "sqlite3": "^3.1.0",
     "superagent": "^1.3.0",
