--- a/.eslintrc
+++ b/.eslintrc
@@ -1,52 +1,66 @@
 {
-  "extends": "eslint:recommended",
-  "plugins": [
-    "react"
-  ],
-  "ecmaFeatures": {
-    "modules": true,
-    "jsx": true
-  },
   "rules": {
-    "react/prop-types": 1,
-    "react/jsx-uses-react": 2,
-    "react/jsx-uses-vars": 2,
-    "react/react-in-jsx-scope": 2,
-    "no-console": 0,
-    "quotes": [2, "single"],
-    "camelcase": [2,
-      {
-        "properties": "always"
-      }
+    "indent": [
+      2,
+      2
     ],
-    "strict": 0,
-    "indent": [2, 2],
-    "new-cap": [2,
-      {
-        "capIsNewExceptions": [
-          "Server",
-          "ENUM"
-        ]
-      }
+    "quotes": [
+      2,
+      "single"
     ],
-    "curly": [2, "multi-line"],
-    "no-multiple-empty-lines": [1,
+    "linebreak-style": [
+      2,
+      "unix"
+    ],
+    "semi": [
+      2,
+      "always"
+    ],
+    "no-underscore-dangle": 0,
+    "max-len": [
+      1,
+      80,
+      2
+    ],
+    "space-after-keywords": [
+      2,
+      "always"
+    ],
+    "space-before-blocks": [
+      2,
+      "always"
+    ],
+    "no-multiple-empty-lines": [
+      1,
       {
         "max": 2
       }
     ],
-    "max-len": [1, 80, 2],
-    "space-after-keywords": [2, "always"],
-    "space-before-blocks": [2, "always"],
-    "no-underscore-dangle": 0,
-    "semi": 2
+    "strict": 0,
+    "no-console": 0,
+    "curly": [
+      2,
+      "multi-line"
+    ],
+    "react/prop-types": 1,
+    "react/jsx-uses-react": 2,
+    "react/jsx-uses-vars": 2,
+    "react/react-in-jsx-scope": 2
   },
   "env": {
     "es6": true,
     "node": true,
-    "mocha": true,
     "browser": true
   },
+  "extends": "eslint:recommended",
+  "ecmaFeatures": {
+    "modules": true,
+    "jsx": true,
+    "experimentalObjectRestSpread": true
+  },
+  "plugins": [
+    "react"
+  ],
   "globals": {
     "__SERVER__": true,
     "__CLIENT__": true,
